# Meridian

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  gameplan.md  package-lock.json  package.json  supply_chain_data.csv
.github/workflows/: ci.yml
backend/: .env.example  package-lock.json  package.json  test-data.json  tsconfig.json
backend/src/: server.ts
backend/src/config/: config.ts
backend/src/controllers/: analysisController.ts  routeController.ts
backend/src/middleware/: rateLimit.ts  requestLogger.ts  validation.ts
backend/src/routes/: analysis.ts
backend/src/services/: openaiService.ts  routeEnrichmentService.ts
backend/src/types/: supplyChain.ts
backend/src/utils/: requestUtils.ts
backend_py/: .env.example  Dockerfile  README.md  pyproject.toml
backend_py/app/: __init__.py  main.py
backend_py/app/api/v1/: compat.py  health.py  ingest.py  router.py
backend_py/app/core/: __init__.py  config.py  logging.py  request_context.py
backend_py/app/middleware/: request_id.py
backend_py/app/services/: health_service.py  ingestion_service.py  normalization_service.py  proxy_service.py
backend_py/app/workers/: __init__.py  runner.py
backend_py/tests/: test_compat_proxy.py  test_health.py  test_ingest.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  sample-supply-chain-data.csv
frontend/src/: App.js  index.css  index.js
frontend/src/components/: AnalysisResults.js  DataUpload.js  DeckGLMap.js  ErrorBoundary.js  (+4 more)
scripts/: dev.sh  with-root-env.js
(+41 files in other folders)
